--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
+	<add name="BD" connectionString="data source=.\sqlexpress;initial catalog=BackEnd;integrated security=True;App=EntityFramework"/>
 	<add name="BackEndEntities" connectionString="metadata=res://*/ModelsBD.BDBackEnd.csdl|res://*/ModelsBD.BDBackEnd.ssdl|res://*/ModelsBD.BDBackEnd.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=BackEnd;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
